tests/baselines/reference/propertyAccessibility2.errors.txt
tests/cases/compiler/propertyAccessibility2.ts(4,9): error TS8010: Property 'x' is private and only accessible within struct 'C'.


==== tests/cases/compiler/propertyAccessibility2.ts (1 errors) ====
    class C {
      private static x = 1;
    }
    var c = C.x;
            ~~~
!!! error TS8010: Property 'x' is private and only accessible within struct 'C'.
    